--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -7,8 +7,8 @@
 
                   <div class="pull-left info">
                         <p class="text-green text-3xl ">{{ request.user.voter }}</p>
-                        {% comment %} <a class="text-white"><i class="fa fa-circle text-success"></i> Online</a> {%
-                        endcomment %}
+                        <!-- <a class="text-white"><i class="fa fa-circle text-success"></i> Online</a> -->
+
                   </div>
 
             </div>
