election_edit_delete

--- a/administration/templates/admin/candidates.html
+++ b/administration/templates/admin/candidates.html
@@ -168,7 +168,7 @@
           },
           dataType: 'json',
           success: function(response) {
-            $('.id').val(id),
+            $('.id').val(response.id),
               $('.display_form').html(response.form);
               $('.fullname').html(response.fullname);
           },
