--- a/administration/templates/admin/voters.html
+++ b/administration/templates/admin/voters.html
@@ -12,6 +12,9 @@
   <div class="row">
 <div class="col-xs-12">
 <div class="box">
+
+  {% if voters %}
+
 <div class="box-body">
   <table id="example1" class="table table-bordered">
       <thead>
@@ -36,9 +39,15 @@
     </tr>
     {% endfor %}      
 
-                            </tbody>
+    </tbody>
   </table>
 </div>
+
+{% else %}
+
+<h2>No Voters yet!!</h2>
+
+{% endif %}
 </div>
 </div>
 </div>
