--- a/administration/templates/admin/elections.html
+++ b/administration/templates/admin/elections.html
@@ -7,51 +7,53 @@
     <h1 class="font-bold text-4xl text-blue-800">Elections</h1>
   </div>
   <div class="row">
-<div class="col-xs-12">
-<div class="box">
-  {% if elections %}
+    <div class="col-xs-12">
+      <div class="box">
+        {% if elections %}
 
-<div class="box-body">
-  <table  class="table table-bordered">
-      <thead>
-          <th>Title</th>
-          <th>Start Time</th>
-          <th>End Time</th>
-          <th>Action</th>
-      </thead>
-      <tbody>
-    {% for election in elections %}
-      
-    <tr>
-      <td>{{ election.title }}</td>
-      <td>{{ election.start_date }}</td>
-      <td>{{ election.end_date }}</td>
-      
-      <td>
-        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ election.id }}'><i class='fa fa-edit'></i> Edit</button>
-        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ election.id }}'><i class='fa fa-trash'></i> Delete</button>
-        {% if not election.is_open %}
+        <div class="box-body">
+          <table class="table table-bordered">
+            <thead>
+              <th>Title</th>
+              <th>Start Time</th>
+              <th>End Time</th>
+              <th>Action</th>
+            </thead>
+            <tbody>
+              {% for election in elections %}
+
+              <tr>
+                <td>{{ election.title }}</td>
+                <td>{{ election.start_date }}</td>
+                <td>{{ election.end_date }}</td>
+
+                <td>
+                  <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ election.id }}'><i
+                      class='fa fa-edit'></i> Edit</button>
+                  <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ election.id }}'><i
+                      class='fa fa-trash'></i> Delete</button>
+                  {% if not election.is_open %}
                   <span class="label label-warning">Closed</span>
+                  {% endif %}
+                </td>
+              </tr>
+              {% endfor %}
+
+            </tbody>
+          </table>
+        </div>
+
+        {% else %}
+        <div class="box-header with-border">
+          <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat">
+            <i class="fa fa-plus"></i> New</a>
+        </div>
+        <h2>No election created yet. Please Create a election!!</h2>
+
         {% endif %}
-      </td>
-    </tr>
-    {% endfor %}      
-
-    </tbody>
-  </table>
-</div>
-
-{% else %}
-<div class="box-header with-border">
-  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat">
-    <i class="fa fa-plus"></i> New</a>
-</div>
-<h2>No election created yet. Please Create a election!!</h2>
-
-{% endif %}
-</div>
-</div>
-</div>
+      </div>
+    </div>
+  </div>
 </section>
 {% endblock content %}
 
@@ -91,55 +93,57 @@
 <!-- Edit -->
 <div class="modal fade" id="edit">
   <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title"><b>Edit Election</b></h4>
-          </div>
-          <div class="modal-body">
-            <form class="form-horizontal" method="POST" action="{% url 'updateElection' %}">
-              {% csrf_token %}
-              <input type="hidden" class="id" name="id">
-              <p class="display_form">
-                
-              </p>
-          </div>
-             
-        </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fa fa-check-square-o"></i> Update</button>
-            </form>
-          </div>
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"><b>Edit Election</b></h4>
       </div>
+      <div class="modal-body">
+        <form class="form-horizontal" method="POST" action="{% url 'updateElection' %}">
+          {% csrf_token %}
+          <input type="hidden" class="id" name="id">
+          <p class="display_form">
+          </p>
+      </div>
+
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i>
+        Close</button>
+      <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fa fa-check-square-o"></i>
+        Update</button>
+      </form>
+    </div>
   </div>
+</div>
 </div>
 
 <!-- Delete -->
 <div class="modal fade" id="delete">
   <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title"><b>Deleting...</b></h4>
-          </div>
-          <div class="modal-body">
-            <form class="form-horizontal" method="POST" action="{% url 'deleteElection' %}">
-              <input type="hidden" class="id" name="id">
-              {% csrf_token %}
-              <div class="text-center">
-                  <p>DELETE Election</p>
-                  <h2 class="bold title"></h2>
-              </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
-            </form>
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"><b>Deleting...</b></h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal" method="POST" action="{% url 'deleteElection' %}">
+          <input type="hidden" class="id" name="id">
+          {% csrf_token %}
+          <div class="text-center">
+            <p>DELETE Election</p>
+            <h2 class="bold title"></h2>
           </div>
       </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
+            class="fa fa-close"></i> Close</button>
+        <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -148,40 +152,40 @@
 
 
 {% block custom_js %}
-  
-<script>
-  $(function() {
-      $(document).on('click', '.edit', function(e) {
-          e.preventDefault();
-          $('#edit').modal('show');
-          var id = $(this).data('id');
-          getRow(id);
-      });
 
-      $(document).on('click', '.delete', function(e) {
-          e.preventDefault();
-          $('#delete').modal('show');
-          var id = $(this).data('id');
-          getRow(id);
-      });
+<script>
+  $(function () {
+    $(document).on('click', '.edit', function (e) {
+      e.preventDefault();
+      $('#edit').modal('show');
+      var id = $(this).data('id');
+      getRow(id);
+    });
+
+    $(document).on('click', '.delete', function (e) {
+      e.preventDefault();
+      $('#delete').modal('show');
+      var id = $(this).data('id');
+      getRow(id);
+    });
 
 
   });
 
   function getRow(id) {
-      $.ajax({
-          type: 'GET',
-          url: '{% url "viewElection" %}',
-          data: {
-              id: id
-          },
-          dataType: 'json',
-          success: function(response) {
-              $('.id').val(response.id);
-              $('.display_form').html(response.form);
-              $('.title').html(response.title);
-          }
-      });
+    $.ajax({
+      type: 'GET',
+      url: '{% url "viewElection" %}',
+      data: {
+        id: id
+      },
+      dataType: 'json',
+      success: function (response) {
+        $('.id').val(response.id);
+        $('.display_form').html(response.form);
+        $('.title').html(response.title);
+      }
+    });
   }
-  </script>
+</script>
 {% endblock custom_js %}
