--- a/administration/templates/admin/candidates.html
+++ b/administration/templates/admin/candidates.html
@@ -11,8 +11,8 @@
 <div class="col-xs-12">
 <div class="box">
 <div class="box-header with-border">
-  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat"><i
-          class="fa fa-plus"></i> New</a>
+  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat">
+    <i class="far fa-plus-square"></i> New</a>
 </div>
 <div class="box-body">
   <table id="example1" class="table table-bordered">
@@ -33,13 +33,13 @@
       <td><img src="/media/{{ candidate.photo }}" width="80" height="80" alt="{{ candidate.fullname }}'s Avatar" class="img img-fluid"></td>
       
       <td>
-        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ candidate.id }}'><i class='fa fa-edit'></i> Edit</button>
-        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ candidate.id }}'><i class='fa fa-trash'></i> Delete</button>
+        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ candidate.id }}'><i class="fas fa-edit fa-sm"></i> Edit</button>
+        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ candidate.id }}'><i class="fas fa-trash-alt fa-sm"></i>Delete</button>
       </td>
     </tr>
     {% endfor %}      
 
-                            </tbody>
+     </tbody>
   </table>
 </div>
 </div>
@@ -75,8 +75,8 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-primary btn-flat" name="add"><i class="fa fa-save"></i> Save</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="add"><i class="fas fa-save"></i> Save</button>
           </div></form></div></div></div></div>
 
 <!-- Edit -->
@@ -99,8 +99,8 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fa fa-check-square-o"></i> Update</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fas fa-save"></i> Update</button>
             </form>
           </div>
       </div>
@@ -126,8 +126,8 @@
               </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fas fa-trash-alt fa-sm"></i> Delete</button>
             </form>
           </div>
       </div>
@@ -168,7 +168,7 @@
           },
           dataType: 'json',
           success: function(response) {
-            $('.id').val(response.id),
+            $('.id').val(id),
               $('.display_form').html(response.form);
               $('.fullname').html(response.fullname);
           },
