--- a/administration/templates/admin/elections.html
+++ b/administration/templates/admin/elections.html
@@ -28,10 +28,10 @@
       <td>{{ election.end_date }}</td>
       
       <td>
-        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ election.id }}'><i class='fa fa-edit'></i> Edit</button>
-        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ election.id }}'><i class='fa fa-trash'></i> Delete</button>
+        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ election.id }}'><i class="fas fa-edit fa-sm"></i> Edit</button>
+        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ election.id }}'><i class="fas fa-trash-alt fa-sm"></i>Delete</button>
         {% if not election.is_open %}
-                  <span class="label label-warning">Closed</span>
+        <button class="btn btn-warning btn-sm  btn-flat disabled"><i class="far fa-clock fa-lg"></i>Closed</button>
         {% endif %}
       </td>
     </tr>
@@ -44,7 +44,7 @@
 {% else %}
 <div class="box-header with-border">
   <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat">
-    <i class="fa fa-plus"></i> New</a>
+    <i class="far fa-plus-square"></i> New</a>
 </div>
 <h2>No election created yet. Please Create a election!!</h2>
 
@@ -54,6 +54,8 @@
 </div>
 </section>
 {% endblock content %}
+
+
 
 {% block modal %}
 <div class="modal fade" id="addnew">
@@ -78,9 +80,8 @@
             {% endfor %}
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
-                class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-primary btn-flat" name="add"><i class="fa fa-save"></i> Save</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="add"><i class="fas fa-save"></i> Save</button>
           </div>
         </form>
       </div>
@@ -108,8 +109,8 @@
              
         </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fa fa-check-square-o"></i> Update</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fas fa-save"></i> Update</button>
             </form>
           </div>
       </div>
@@ -135,8 +136,8 @@
               </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fas fa-trash-alt fa-sm"></i> Delete</button>
             </form>
           </div>
       </div>
