--- a/administration/templates/admin/positions.html
+++ b/administration/templates/admin/positions.html
@@ -11,8 +11,8 @@
 <div class="col-xs-12">
 <div class="box">
 <div class="box-header with-border">
-  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat"><i
-          class="fa fa-plus"></i> New</a>
+  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat">
+    <i class="far fa-plus-square"></i> New</a>
 </div>
 <div class="box-body">
   <table id="example1" class="table table-bordered">
@@ -33,8 +33,8 @@
       <td>{{ position.priority }}</td>
       
       <td>
-        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ position.id }}'><i class='fa fa-edit'></i> Edit</button>
-        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ position.id }}'><i class='fa fa-trash'></i> Delete</button>
+        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ position.id }}'><i class="fas fa-edit fa-sm"></i> Edit</button>
+        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ position.id }}'><i class="fas fa-trash-alt fa-sm"></i> Delete</button>
       </td>
     </tr>
     {% endfor %}      
@@ -75,8 +75,8 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-primary btn-flat" name="add"><i class="fa fa-save"></i> Save</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="add"><i class="fas fa-save"></i> Save</button>
           </div></form></div></div></div></div>
 
 <!-- Edit -->
@@ -106,7 +106,7 @@
               <div class="col-sm-9">
                 <input type="text" class="form-control" id="max_vote" name="max_vote">
               </div>
-          </div>
+            </div>
 
           <div class="form-group">
             <label for="priority" class="col-sm-3 control-label">Priority</label>
@@ -114,13 +114,13 @@
             <div class="col-sm-9">
               <input type="text" class="form-control" id="priority" name="priority">
             </div>
-        </div>
+          </div>
 
              
-          </div>
+        </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fa fa-check-square-o"></i> Update</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fas fa-save"></i> Update</button>
             </form>
           </div>
       </div>
@@ -142,12 +142,12 @@
               {% csrf_token %}
               <div class="text-center">
                   <p>DELETE POSITION</p>
-                  <h2 class="bold fullname"></h2>
+                  <h2 class="bold name"></h2>
               </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
-            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+            <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fas fa-trash-alt fa-sm"></i> Delete</button>
             </form>
           </div>
       </div>
