--- a/account/templates/account/footer/about.html
+++ b/account/templates/account/footer/about.html
@@ -86,7 +86,7 @@
                 </p>
                 <p class="text-md mb-3" id="contact">
                     <span class="font-medium mb-1">Contact</span> <br>
-                <div class="px-5">Mail at <span class="font-medium">teamtechtitans@gmail.com</span>
+                <div class="px-5">Mail at : <span class="font-medium">teamtechtitans@gmail.com</span>
                 </div>
                 </p>
             </div>
