--- a/administration/templates/navbar.html
+++ b/administration/templates/navbar.html
@@ -1,9 +1,9 @@
 {% load static %}
-<header class="main-header pt-4">
+<header class="main-header py-6">
   <!-- Logo -->
   <a href=" {% url 'home' %}">
     <div class="absolute">
-      <img style="width:20rem;" src="{% static 'images/logo_t.png' %}" alt="Logo">
+      <img style="width:18rem;" src="{% static 'images/logo_t.png' %}" alt="Logo">
     </div>
   </a>
 
