--- a/account/templates/account/footer/team.html
+++ b/account/templates/account/footer/team.html
@@ -20,7 +20,7 @@
 
                 </div>
                 <div>
-                    <p>Proffessional web developer | Python django | PostgreSQL </p>
+                    <p> Proffessional Web Developer | Python django Devoloper | Skill in PostgreSQL | Skill in Project Management Software</p>
                 </div>
                 <div class="flex gap-8 pt-1 justify-center">
                     <a href=""><i class="fa-brands fa-facebook text-3xl hover:text-black"></i></a>
@@ -40,7 +40,7 @@
 
                 </div>
                 <div>
-                    <p>Proffessional web developer | Python django | PostgreSQL </p>
+                    <p> Proffessional Web Developer | Python django Devoloper | Skill in PostgreSQL | Skill in Project Management Software</p>
 
                 </div>
                 <div class="flex gap-8 pt-4 justify-center">
@@ -63,7 +63,7 @@
 
                 </div>
                 <div>
-                    <p>Proffessional web developer | Python django | PostgreSQL </p>
+                    <p> Proffessional Web Developer | Python django Devoloper | Skill in PostgreSQL | Skill in Project Management Software</p>
 
                 </div>
                 <div class="flex gap-8 pt-4 justify-center">
@@ -78,14 +78,13 @@
             <div class="shadow-2xl shadow-blue-200/20 p-4">
                 <div class="pic text-center pb-6 flex flex-col">
                     <div class="flex justify-center"><img class="w-[250px] h-[250px] border-4 rounded-full"
-                            src="{% static 'images/shakib.png' %}" alt="profile"></div>
+                            src="{% static 'images/sakib.jpg' %}" alt="profile"></div>
                     <h3 class="text-yellow-500 text-xl font-bold pt-4">Md Ikhtiar Uddin Shakib</h3>
                     <h3 class="text-purple-200 text-md font-bold pt-2">Software Developer</h3>
 
                 </div>
                 <div>
-                    <p>Proffessional web developer | Python django | PostgreSQL </p>
-
+                    <p> Proffessional Web Developer | Python django Devoloper | Skill in PostgreSQL | Skill in Project Management Software</p>
                 </div>
                 <div class="flex gap-8 pt-4 justify-center">
                     <a href=""><i class="fa-brands fa-facebook text-3xl hover:text-black"></i></a>
