--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -5,39 +5,40 @@
 {% block content %}
 
     <div class="bg-[#032245] h-screen">
-        <div class="">
+       
 
             <div class="flex mx-auto pt-14 justify-center">
 
                 <div class="pt-4 w-1/2">
-                    <img src="{% static 'images/vote.png' %}" alt=" photo">
+                    <img src="{% static 'images/log.png' %}" alt=" photo">
                 </div>               
      
                 <div class="bg-white w-1.5/3  border mr-4 rounded-md p-12 text-gray-600">
                     <h1 class="text-4xl block text-center font-semibold">Login</h1>
+                    {% include 'includes/alerts.html' %}
                     <hr class="pt-6">
                     <form action="{% url 'login' %}" method="POST">
                         {% csrf_token %}
                         <div class="mt-2">
                             <label for="username" class="block  text-xl mb-2">Username</label>
-                            <input type="text"
-                                class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-xl focus:border-gray-600"
-                                id="username" name="username">
+                            <input type="text" class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-xl focus:border-gray-600"
+                                id="username" name="username" placeholder="Username">
                         </div>
         
                         <div class="mt-2">
                         <label for="password" class="block  text-xl mb-2">Password</label>
-                        <input type="password"
-                            class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-xl focus:border-gray-600"
-                            id="password" name="password">
+                        
+                        <input type="password"class="border w-full px-2 py-2 focus:outline-none focus:ring-0  text-xl focus:border-gray-600"
+                            id="password" name="password" placeholder="Password">
+                            
                         </div>
         
                         <div class="mt-2 flex justify-between items-center">
         
                         </div>
 
-                        <div class="pb-8">
-                            <a class="text-xl text-blue-500 " href="{% url 'change_pass' %}">Forgot Password?</a>
+                        <div class="pb-8 pt-4">
+                            <a class="text-xl text-blue-500 " href="{% url 'forgotPassword' %}">Forgot Password?</a>
                         </div>
         
                         <div class="pt-8 flex justify-between">
@@ -57,7 +58,6 @@
             </div>
 
 
-        </div>
     </div>
 
  
