--- a/account/templates/account/pass_change.html
+++ b/account/templates/account/pass_change.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <section="update_password">
-        <div class="flex justify-between bg-[#032245] h-screen px-24 pt-24 ">
+        <div class="flex justify-between bg-[#032245] h-screen px-24 pt-14 text-gray-700">
             <div class="w-1/2">               
                 <img src="{% static 'images/login1.png' %}" alt="">                
             </div>
@@ -12,22 +12,22 @@
                 <form method="post">
                     {% csrf_token %}
                     
-                        <div class="p-6 bg-white rounded-md">
-                            <h1 class="text-3xl block text-center font-semibold">Change Password</h1>
+                        <div class="p-6 bg-white rounded-md text-xl">
+                            <h1 class="text-4xl block text-center font-semibold">Change Password</h1>
                             <hr class="mt-3"> 
                 
-                            <div class="mt-14">          
+                            <div class="mt-14 ">          
                                 <label for="new_password1">New password</label>
                                 {{form.new_password1}}
                             </div>
                            
                             <div class="mt-2">
-                                <label for="new_password2" class="block text-base mb-2">Confirm New Password</label>
+                                <label for="new_password2">Confirm New Password</label>
                                 {{form.new_password2}}
                             </div>
                 
                             <div class="mt-1 pt-12 pb-6">
-                                <button type="submit" class="rounded-sm  bg-blue-700 text-white py-2 w-full hover:bg-blue-900">Update Password</button>
+                                <button type="submit" class="rounded-md  bg-blue-700 text-white py-2 w-full hover:bg-blue-900"><i class="fa-solid fa-cloud-arrow-up"></i>Update Password</button>
                             </div>
                             <p class="mt-2">Already have an account? Please <a href="{% url 'login' %}" class="text-green-500 underline hover:text-pink-500">Login</a></p> 
                             
