--- a/administration/templates/admin/candidates.html
+++ b/administration/templates/admin/candidates.html
@@ -77,7 +77,10 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
             <button type="submit" class="btn btn-success btn-flat" name="add"><i class="fas fa-save"></i> Save</button>
-          </div></form></div></div></div></div>
+          </div>
+        </form>
+        
+        </div></div></div></div>
 
 <!-- Edit -->
 <div class="modal fade" id="edit">
