--- a/administration/templates/admin/elections.html
+++ b/administration/templates/admin/elections.html
@@ -130,7 +130,7 @@
               <input type="hidden" class="id" name="id">
               {% csrf_token %}
               <div class="text-center">
-                  <p>DELETE Election</p>
+                  <p>Delete Election</p>
                   <h2 class="bold title"></h2>
               </div>
           </div>
@@ -139,12 +139,6 @@
             <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fas fa-trash-alt fa-sm"></i> Delete</button>
             </form>
           </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
-            class="fa fa-close"></i> Close</button>
-        <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
-        </form>
       </div>
     </div>
   </div>
@@ -171,9 +165,8 @@
       var id = $(this).data('id');
       getRow(id);
     });
-
-
   });
+
 
   function getRow(id) {
     $.ajax({
