--- a/account/templates/account/footer/about.html
+++ b/account/templates/account/footer/about.html
@@ -4,20 +4,20 @@
 <div class="bg-[#032245] text-white">
     <div style=" max-width: 1240px; margin: 0 auto;">
         <div class="flex justify-center item-center"> <img src="{% static 'images/ducsu_logo.png' %}"
-                style="height: 150px;" alt="logo"></div>
+                style="height: 100px;" alt="logo"></div>
         <div class="flex gap-10">
-            <div class="w-14">
+            <div class="w-10">
                 <ul class="sticky top-0 text-lg ">
-                    <li class="hover:text-red-500"><a href="#overview">Overview</a></li>
-                    <li class="hover:text-red-500"><a href="#objectives">Objectives</a></li>
-                    <li class="hover:text-red-500"><a href="#useage">Useage</a></li>
-                    <li class="hover:text-red-500"><a href="#technologies">Technologies</a></li>
-                    <li class="hover:text-red-500"><a href="#contact">Contact</a></li>
+                    <li class="font-bold hover:text-red-500"><a href="#overview">Overview</a></li>
+                    <li class="font-bold hover:text-red-500"><a href="#objectives">Objectives</a></li>
+                    <li class="font-bold hover:text-red-500"><a href="#useage">Useage</a></li>
+                    <li class="font-bold hover:text-red-500"><a href="#technologies">Technologies</a></li>
+                    <li class="font-bold hover:text-red-500"><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="flex-auto w-64 ms-10 p-3 font-light">
                 <p class="font-light mb-3" id="overview">
-                    <span class="font-medium">Overview</span> <br>
+                    <span class="font-bold">Overview</span> <br>
                 <div class="px-5">
                     The DUCSU Online Voting System
                     is a groundbreaking project that aims to bring the power of democratic participation to people far
@@ -28,7 +28,7 @@
                 </div>
                 </p>
                 <p class="text-md mb-3" id="objectives">
-                    <span class="font-medium">Objectives</span> <br>
+                    <span class="font-bold">Objectives</span> <br>
                 <ol class="px-5">
                     <li> 1. To offer a flexible and adaptable online voting platform for a wide range of applications,
                         including
@@ -44,7 +44,7 @@
                 </ol>
                 </p>
                 <p class="text-md mb-3" id="useage">
-                    <span class="font-medium">Useages</span> <br>
+                    <span class="font-bold">Useages</span> <br>
                 <div class="px-5">
                     <h4 class="font-normal mb-1">User Registration and Authentication</h4>
 
@@ -81,11 +81,11 @@
                 </div>
                 </p>
                 <p class="text-md mb-3" id="technologies">
-                    <span class="font-medium mb-1">Technologies</span> <br>
+                    <span class="font-bold mb-1">Technologies</span> <br>
                 <div class="px-5">HTML, CSS, Js, Tailwind, Django, Django Rest api, PostgreeSQL</div>
                 </p>
                 <p class="text-md mb-3" id="contact">
-                    <span class="font-medium mb-1">Contact</span> <br>
+                    <span class="font-bold mb-1">Contact</span> <br>
                 <div class="px-5">Mail at : <span class="font-medium">teamtechtitans@gmail.com</span>
                 </div>
                 </p>
