--- a/administration/templates/admin/elections.html
+++ b/administration/templates/admin/elections.html
@@ -15,8 +15,8 @@
   <table  class="table table-bordered">
       <thead>
           <th>Title</th>
-          <th>Start Time</th>
-          <th>End Time</th>
+          <th>Start Time(BST)</th>
+          <th>End Time(BST)</th>
           <th>Action</th>
       </thead>
       <tbody>
@@ -106,11 +106,11 @@
           </p>
       </div>
 
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
-      <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fas fa-save"></i> Update</button>
-      </form>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
+        <button type="submit" class="btn btn-success btn-flat" name="edit"><i class="fas fa-save"></i> Update</button>
+        </form>
+      </div>
     </div>
   </div>
 </div>
