--- a/voting/templates/voting/voter/ballot.html
+++ b/voting/templates/voting/voter/ballot.html
@@ -5,6 +5,12 @@
 {% block content %}
 <section class="content" style="max-height: 80vh; overflow-y: auto;">
   <h1 class="page-header text-center title"><b>{{ election.title }}</b></h1>
+  <div id="countdown" class="countdown-box flex justify-center text-3xl"
+    data-time-remaining="{{ time_remaining|default:0 }}">
+    <div class="countdown-text mb-5"> Election Ends In : </div>
+    <span id="countdown-timer" class="mb-5 text-red-500"> 00d 00h 00m 00s</span>
+  </div>
+
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
 
@@ -95,6 +101,37 @@
 
   });
 
+  //  coundown 
+  var timeRemaining = parseInt(document.querySelector("#countdown").getAttribute("data-time-remaining"), 10);
+
+  function updateCountdown() {
+    if (timeRemaining > 0) {
+      var days = Math.floor(timeRemaining / (60 * 60 * 24));
+      var hours = Math.floor((timeRemaining % (60 * 60 * 24)) / (60 * 60));
+      var minutes = Math.floor((timeRemaining % (60 * 60)) / 60);
+      var seconds = timeRemaining % 60;
+
+      var countdownText = '';
+      if (days > 0) {
+        countdownText += days + "d ";
+      }
+      if (hours > 0) {
+        countdownText += hours + "h ";
+      }
+      if (minutes > 0) {
+        countdownText += minutes + "m ";
+      }
+      countdownText += seconds + "s";
+
+      document.getElementById('countdown-timer').innerHTML = countdownText;
+      timeRemaining--;
+    } else {
+      document.getElementById('countdown-timer').innerHTML = "Election has ended.";
+      clearInterval(countdownInterval);
+    }
+  }
+  var countdownInterval = setInterval(updateCountdown, 1000);
+  updateCountdown();
 
 </script>
 
