--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
       
   <!-- Theme style -->
   <link rel="stylesheet" href="{% static 'dist/css/AdminLTE.min.css' %}">
+  <link rel="stylesheet" href="{% static 'css/alert.css' %}">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
      folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="{% static 'dist/css/skins/_all-skins.min.css' %}">
@@ -48,13 +49,15 @@
          
         {% include "header.html" %}
 
-        {% block content %}
-        
-        {% endblock content %}       
+          {% block content %}
+          
+          {% endblock content %}       
         
 
         {% include "footer1.html"%}
-      
+
+        
+     
 </body>
 
 </html>
