--- a/templates/footer1.html
+++ b/templates/footer1.html
@@ -14,13 +14,13 @@
             <a href="{% url 'about' %}" class="hover:text-red-700">About</a>
             <a href="{% url 'profile' %}" class="hover:text-red-700">Team</a>
             <a href="https://calendar.google.com/calendar/" class="hover:text-red-700" target="_blank">Event Calendar</a>
-            <a href="" class="hover:text-red-700">Requirements</a>
+            
            
           </div>              
         </div>
       </div>
 
-      <div>
+      {% comment %} <div>
         <div class="flex flex-col ">
           <h1 class="text-xl font-bold">QUICK LINKS</h1>
         </div>
@@ -31,7 +31,7 @@
           <a href="" class="hover:text-red-700">Campaign</a>
           <a href="" class="hover:text-red-700">Support</a>                
         </div>
-      </div>
+      </div> {% endcomment %}
 
       <div>
         <div class="flex flex-col  ">
@@ -53,10 +53,7 @@
             <i class="fa-brands fa-facebook-f" ></i>
             <span>Facebook</span>
           </a>
-          <a class="hover:text-red-700" href="https://www.youtube.com" target="_blank">
-            <i class="fa-brands fa-youtube"></i>
-            <span >Youtube</span>
-          </a>
+          
         </div>
       </div>           
       
