--- a/account/templates/account/footer/team.html
+++ b/account/templates/account/footer/team.html
@@ -57,7 +57,7 @@
             <div class="shadow-2xl shadow-blue-200/20 p-4">
                 <div class="pic text-center pb-6 flex flex-col">
                     <div class="flex justify-center"><img class="w-[250px] h-[250px] border-4 rounded-full"
-                            src="{% static 'images/nowshad.jpg' %}" alt="profile"></div>
+                            src="{% static 'images/Akhter.jpg' %}" alt="profile"></div>
                     <h3 class="text-yellow-500 text-xl font-bold pt-4">Md Akhter Hosen</h3>
                     <h3 class="text-purple-200 text-md font-bold pt-2">Software Developer</h3>
 
