--- a/templates/home.html
+++ b/templates/home.html
@@ -119,7 +119,9 @@
             <div class="w-1/2">
                 <form method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{form}}
+                    
+                    <p class="text-white font-bold">{{form}}</p>
+                    
                     <div class="text-center pt-5 ">
                         <button
                             class="shadow-xl shadow-cyan-700/30 font-bold text-white text-xl p-2 border border-blue-500 rounded-xl hover:bg-sky-700 cursor-pointer"
