--- a/templates/includes/alerts.html
+++ b/templates/includes/alerts.html
@@ -1,11 +1,14 @@
 {% if messages %}
     {% for message in messages %}
         <div id="message" class="container w-full">
-            <div {% if message.tags %} class='alert alert-{{message.tags}}'{% endif %} role="alert">
-                <button type="button" class="close" data-dismis="alert"><span aria-hidden="true">&times;</span></button>
+            <div {% if message.tags %} class='alert alert-{{message.tags}}'{% endif %} role="alert" id="close">
+                <button type="button" onclick="msgclose()" class="close"  data-dismis="alert"><span aria-hidden="true">&times;</span></button>
                 {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error: {% endif %}
                 {{message}}
             </div>
         </div>
+
+
+      
     {% endfor %}
 {% endif %}
