--- a/administration/templates/admin/admin_home.html
+++ b/administration/templates/admin/admin_home.html
@@ -75,7 +75,7 @@
 <div class="col-xs-12">
 <h3>Election Name: <b> {{election_title}} </b> . Positions with candidates vote count in tally
   <span class="pull-right">
-    <a href="{% url 'printResult' %}" class="btn btn-success btn-sm btn-flat"><span class="glyphicon glyphicon-print"></span> Print</a>
+    <a href="{% url 'printResult' %}" class="btn btn-success btn-sm btn-flat"><span class="glyphicon glyphicon-print"></span> Print Result</a>
   </span>
 </h3>
 </div>
