--- a/administration/templates/superAdmin/electionList.html
+++ b/administration/templates/superAdmin/electionList.html
@@ -1,10 +1,11 @@
 {% extends 'root.html' %}
 
-{% block head_title %}DUCSU | Elections{% endblock %}
+{% block head_title %}DUCSU | Election List{% endblock %}
+
 {% block content %}
 <section class="content">
   <div class="flex justify-center mb-2">
-    <h1 class="font-bold text-4xl text-blue-800">Elections</h1>
+    <h1 class="font-bold text-4xl text-blue-800">Election List</h1>
   </div>
   <div class="row">
 <div class="col-xs-12">
@@ -12,12 +13,12 @@
   {% if elections %}
 
 <div class="box-body">
-  <table  class="table table-bordered">
+  <table id="example1"  class="table table-bordered">
       <thead>
-          <th>Title</th>
+          <th>Election Title</th>
+          <th>Election Admin</th>
           <th>Start Time(BST)</th>
           <th>End Time(BST)</th>
-          <th>Action</th>
           <th>Status</th>
 
       </thead>
@@ -26,32 +27,29 @@
       
     <tr>
       <td>{{ election.title }}</td>
+      <td>{{ election.admin.email }}</td>
       <td>{{ election.start_date }}</td>
       <td>{{ election.end_date }}</td>
-      
-      <td>
-        <button class='btn btn-success btn-sm edit btn-flat' data-id='{{ election.id }}'><i class="fas fa-edit fa-sm"></i> Edit</button>
-        <button class='btn btn-danger btn-sm delete btn-flat' data-id='{{ election.id }}'><i class="fas fa-trash-alt fa-sm"></i>Delete</button>
-      </td>
-
+    
       <td> {% if not election.is_open %}
         <button class="btn btn-warning btn-sm  btn-flat disabled"><i class="far fa-clock fa-lg"></i>Closed</button>
            {% else %}
            <button class="btn btn-success btn-sm edit btn-flat disabled"><i class="far fa-clock fa-lg"></i>Running</button>
         {% endif %}</td>
+        
     </tr>
     {% endfor %}      
 
-            </tbody>
-          </table>
-        </div>
+    </tbody>
+    </table>
+    </div>
 
 {% else %}
 <div class="box-header with-border">
-  <a href="#addnew" data-toggle="modal" class="btn btn-primary btn-sm btn-flat">
-    <i class="far fa-plus-square"></i> New</a>
+
+<h2>No election created yet.</h2>
+  
 </div>
-<h2>No election created yet. Please Create a election!!</h2>
 
         {% endif %}
       </div>
@@ -63,36 +61,6 @@
 
 
 {% block modal %}
-<div class="modal fade" id="addnew">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title"><b>Add New Election</b></h4>
-      </div>
-      <div class="modal-body">
-        <form class="form-horizontal" method="POST" action="{% url 'viewElections' %}">
-          {% csrf_token %}
-          <div class="modal-body">
-            {% for field in form1 %}
-            <div class="form-group has-feedback">
-              <span class="text-danger">{{field.errors}}</span>
-              {{field.label_tag}}
-              {{field}}
-            </div>
-            {% endfor %}
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
-            <button type="submit" class="btn btn-success btn-flat" name="add"><i class="fas fa-save"></i> Save</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
 
 <!-- Edit -->
 <div class="modal fade" id="edit">
@@ -118,7 +86,6 @@
       </div>
     </div>
   </div>
-</div>
 </div>
 
 <!-- Delete -->
@@ -147,7 +114,6 @@
       </div>
     </div>
   </div>
-</div>
 
 {% endblock modal %}
 
