--- a/templates/header.html
+++ b/templates/header.html
@@ -12,8 +12,8 @@
 
                     {% if request.user.is_authenticated %}
                     <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'home' %}">Home</a>
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'userDashboard' %}">Welcome, {{ request.user.username }}</a>
-                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'account_logout' %}">Logout</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'userProfile' %}">Welcome, {{ request.user.username }}</a>
+                    <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'logout' %}">Logout</a>
                     {% else %}                      
 
                     <a class="hover:bg-pink-500 hover:rounded-md hover:text-white px-2" href="{% url 'home' %}">Home</a>
