--- a/administration/templates/superAdmin/userList.html
+++ b/administration/templates/superAdmin/userList.html
@@ -104,8 +104,7 @@
               </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default btn-flat pull-left" data-dismiss="modal"><i
-              class="fa fa-close"></i> Close</button>
+            <button type="button" class="btn btn-warning btn-flat pull-left" data-dismiss="modal"><i class="fas fa-times-circle"></i> Close</button>
           <button type="submit" class="btn btn-danger btn-flat" name="delete"><i class="fa fa-trash"></i> Delete</button>
             </form>
           </div>
