--- a/templates/header.html
+++ b/templates/header.html
@@ -1,11 +1,12 @@
 {% load static %}
 
 <div class=" bg-[#032245]">
+{% comment %} <div class=" bg-lime-900"> {% endcomment %}
     <div class="px-24 mx-auto ">
 
-        <div class="flex justify-between pt-8 pb-4">
+        <div class="flex justify-between pt-6 pb-8">
             <div>
-                <a href="{% url 'home' %}"><img class="absolute h-14 w-44" src="{% static 'images/logo_t.png'%}" alt="Logo"></a>                
+                <a href="{% url 'home' %}"><img class="absolute h-14 w-44 " src="{% static 'images/logo_t.png'%}" alt="Logo"></a>                
             </div>
             <div>
                 <div class="flex gap-[20px] pt-2 text-white font-bold">
