--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,10 @@
 
 {% block content %}
 <div class="h-screen bg-[#032245]">
+{% comment %} <div class="h-screen bg-gray-900 "> {% endcomment %}
     <div class="container px-24 mx-auto ">
         <!--home page section-->
-        <div class="flex gap-[100px]">
+        <div class="flex gap-8">
             <div class="text-sky-200 w-1/3 flex flex-col gap-10 pt-[100px]">
                 <div class="text-3xl font-bold">
                     <h1>We Make Online Elections Easy and Affordable.</h1>
@@ -25,7 +26,7 @@
 
             <div>
                 <div class="pt-[5px] ">
-                    <img class="w-[800px]" src="static/images/home.png" alt="">
+                    <img class="w-[800px] opacity-75" src="static/images/home.png" alt="">
                 </div>
             </div>
         </div>
