added how to use page and redesign about page

--- a/administration/templates/root.html
+++ b/administration/templates/root.html
@@ -67,7 +67,7 @@
     {% include "sidebar.html" %}
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper bg-white bg-slate-800">
 
       {% block content %}
 
